# genai-meal-planner

./: .env.example  .gitignore  README.md  main.py  meal_planner.db  pyproject.toml  requirements.txt
.github/agents/: ROADMAP.md
.github/skills/docker-expert/: SKILL.md
.github/skills/dspy/: SKILL.md
.github/skills/prompt-engineering-patterns/scripts/: optimize-prompt.py
ai/: prompts.py
ai/agents/: gemini.py  planner.py  retriever.py  validator.py
api/: database.py  main.py  models.py  routers.py  schemas.py  seeds.py  yaml_import.py
examples/: personal-ingredients.example.yaml
tests/: test_api.py  test_pydantic_agents.py
