[project]
name = "genai-meal-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "pydantic>=2.12.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "pytest>=8.4.0",
    "pre-commit>=4.5.1",
]
